--- a/main.css
+++ b/main.css
@@ -3,6 +3,10 @@
 }
 .mit-active {
     color: #283b70 !important;
+    border-bottom: 3px solid #283b70;
+}
+.mit-blue {
+    color: #283b70 !important;
 }
 
 .mit-head {
@@ -12,4 +16,12 @@
 
 .headpad {
     padding: 1.5em;
+}
+
+#a-deco{
+    text-decoration: none;
+    opacity: 0.7;
+}
+#a-deco:hover{
+    opacity: 1;
 }
