--- a/einstellungen.css
+++ b/einstellungen.css
@@ -41,11 +41,13 @@ h2,p,b{
 #buttonAllgInfoBearbeiten{
     margin: 2%;
     background-color: #283b70;
+    border-color: #283b70;
     color: white;
 }
 #buttonPasswortaendern{
     margin: 2%;
     background-color: #283b70;
+    border-color: #283b70;
     color: white;
 }
 #buttonAccountLoeschen{
