--- a/Nutzer/Veranstaltungen/veranstaltungenNutzer.css
+++ b/Nutzer/Veranstaltungen/veranstaltungenNutzer.css
@@ -4,3 +4,16 @@
     color: white;
 
 }
+#buttoneinzelveranstaltungVeranstaltungDetails{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
+    font-size: small;
+
+}
+.vertical-line {
+    border-left: 3px solid grey; /* Ändere die Farbe und die Breite nach Bedarf */
+    height: 80%; /* Die Linie erstreckt sich über die gesamte Höhe der Spalte */
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
