--- a/Nichteingeloggt/veranstaltungen.css
+++ b/Nichteingeloggt/veranstaltungen.css
@@ -1,10 +1,24 @@
-#VeranstaltungsgruppenListe{
-    border-color:#283b70;
-    border-width: 3px;
-    border-style: solid;
-    margin: 5%;
-}
+#buttonVeranstaltungDetails{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
 
-p{
- text-align: center;
+}
+#buttoneinzelveranstaltungVeranstaltungDetails{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
+    font-size: small;
+
+}
+.vertical-line {
+    border-left: 2px solid lightgray; /* Ändere die Farbe und die Breite nach Bedarf */
+    height: 80%; /* Die Linie erstreckt sich über die gesamte Höhe der Spalte */
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.card{
+    border-color: #8fabca;
+    border-width: 2px;
+    
 }
