--- a/Nutzer/Veranstaltungen/veranstaltungenNutzer.css
+++ b/Nutzer/Veranstaltungen/veranstaltungenNutzer.css
@@ -12,8 +12,27 @@
 
 }
 .vertical-line {
-    border-left: 3px solid grey; /* Ändere die Farbe und die Breite nach Bedarf */
+    border-left: 2px solid lightgray; /* Ändere die Farbe und die Breite nach Bedarf */
     height: 80%; /* Die Linie erstreckt sich über die gesamte Höhe der Spalte */
     margin-top: 5%;
     margin-bottom: 5%;
+}
+.card{
+    border-color: #8fabca;
+    border-width: 2px;
+}
+#veranstaltungsdetailstitel{
+    text-align: center;
+}
+#personenzahl{
+    color: #283b70;
+    font-size: x-large;
+}
+#veranstaltungsdetailsansicht{
+    margin: 5%;
+}
+.btn{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
 }
