--- a/Nichteingeloggt/veranstaltungen.css
+++ b/Nichteingeloggt/veranstaltungen.css
@@ -20,5 +20,19 @@
 .card{
     border-color: #8fabca;
     border-width: 2px;
-    
+}
+#veranstaltungsdetailstitel{
+    text-align: center;
+}
+#personenzahl{
+    color: #283b70;
+    font-size: x-large;
+}
+#veranstaltungsdetailsansicht{
+    margin: 5%;
+}
+.btn{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
 }
