--- a/Admin/Einstellungen/einstellungen.css
+++ b/Admin/Einstellungen/einstellungen.css
@@ -1,22 +1,3 @@
-#AccountInformationen{
-    border-color:#283b70;
-    border-width: 3px;
-    border-style: solid;
-    margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 1%;   
-}
-
-#Passwortaendern{
-    border-color:#283b70;
-    border-width: 3px;
-    border-style: solid;
-    margin-top: 3%;
-    margin-left: 5%;
-    margin-right: 1%;
-    margin-bottom: 5%;
-}
-
 
 h2,p,b{
     margin: 2%;
@@ -52,7 +33,7 @@ h2,p,b{
 }
 
 .card{
-    border-color: #283b70;
+    border-color: #8fabca;
     border-width: 2px;
-    
+    margin-top: 5%;
 }
