--- a/Admin/Veranstaltungen/veranstaltungenAmin.css
+++ b/Admin/Veranstaltungen/veranstaltungenAmin.css
@@ -24,6 +24,10 @@
     font-size: small;
     margin-right: 5%;
 }
+#buttoneinzelveranstaltungLöschen{
+    font-size: small;
+    margin-right: 5%;
+}
 .vertical-line {
     border-left: 2px solid lightgray; /* Ändere die Farbe und die Breite nach Bedarf */
     height: 80%; /* Die Linie erstreckt sich über die gesamte Höhe der Spalte */
