nutzer meine veranstaltungen startseite

--- a/Nutzer/meineVeranstaltungen/meineVeranstaltung.css
+++ b/Nutzer/meineVeranstaltungen/meineVeranstaltung.css
@@ -13,3 +13,9 @@
     border-color: #283b70;
     color: white;
 }
+#buttonmeineVeranstaltungDetails{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
+
+}
