--- a/Login/login.css
+++ b/Login/login.css
@@ -10,6 +10,9 @@
     border-color: #283b70 !important;
     color: white;
 }
+.btn-log:hover {
+    opacity: 90%;
+}
 
 #link-style {
     text-decoration: none;
