--- a/Organisation/Veranstaltungen/veranstaltungenorg.css
+++ b/Organisation/Veranstaltungen/veranstaltungenorg.css
@@ -3,3 +3,33 @@
     border-color: #283b70;
     color: white;
 }
+
+.vertical-line {
+    border-left: 2px solid lightgray; /* Ändere die Farbe und die Breite nach Bedarf */
+    height: 80%; /* Die Linie erstreckt sich über die gesamte Höhe der Spalte */
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.card{
+    border-color: #8fabca;
+    border-width: 2px;
+}
+#buttonmeineVeranstaltungDetails,#buttonspeichern,#veranstaltungerstellen{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
+
+}
+#personDetails{
+    background-color: #283b70;
+    border-color: #283b70;
+    color: white;
+
+}
+#personenzahl{
+    color: #283b70;
+    font-size: x-large;
+}
+#veranstaltungsdetailstitel{
+    text-align: center;
+}
