--- a/Organisation/MeineVeranstaltungen/meineVeranstaltungenOrga.css
+++ b/Organisation/MeineVeranstaltungen/meineVeranstaltungenOrga.css
@@ -8,7 +8,7 @@
     border-color: #8fabca;
     border-width: 2px;
 }
-#buttonmeineVeranstaltungDetails,#buttonspeichern,#veranstaltungerstellen{
+#buttonmeineVeranstaltungDetails,#buttonspeichern,#veranstaltungerstellen,#veranstaltungbearbeiten{
     background-color: #283b70;
     border-color: #283b70;
     color: white;
