--- a/Nutzer/Einstellungen/einstellungenAllgInfoBearbeiten.css
+++ b/Nutzer/Einstellungen/einstellungenAllgInfoBearbeiten.css
@@ -1,7 +1,13 @@
 #buttonspeichern{
     background-color: #283b70;
+    border-color: #283b70;
     color: white;
 }
 .card{
     margin-bottom: 5%;
+}
+#aenderungspeichern{
+    background-color: #283b70;
+
+    color: white;
 }
